# heme-kiitchen-app

./: .gitignore  README.md  TECH_STACK.md  WHATSAPP_INTEGRATION.md  package-lock.json  package.json
.claude/: settings.local.json
apps/api/: .env.example  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
apps/api/middleware/: auth.py
apps/api/models/: domain.py
apps/api/repositories/: json_repo.py  order_repo.py  product_repo.py  site_content_repo.py
apps/api/routers/: auth.py  orders.py  products.py  site_content.py
apps/api/services/: cloudinary_service.py  whatsapp.py
apps/api/src/: index.ts
apps/api/src/middleware/: auth.ts
apps/api/src/repositories/: JsonRepository.ts  OrderRepository.ts  ProductRepository.ts  SiteContentRepository.ts
apps/api/src/routes/: auth.ts  orders.ts  products.ts  siteContent.ts
apps/api/src/services/: WhatsAppService.ts
apps/web/: package-lock.json  package.json
apps/web/public/: fssai-certificate-placeholder.txt
apps/web/public/images/: logo-placeholder.txt
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: AddToCartButton.tsx  AdminGuard.tsx  AdminHeader.tsx  AdminNav.tsx  CartIcon.tsx  (+3 more)
data/: orders.json  products.json  site-content.json
openspec/changes/heme-kiitchen-web-app/: tasks.md
openspec/specs/culinary-theme/: spec.md
openspec/specs/fastapi-api-server/: spec.md
openspec/specs/jwt-admin-auth/: spec.md
openspec/specs/mobile-bottom-toolbar/: spec.md
openspec/specs/openapi-type-codegen/: spec.md
openspec/specs/pydantic-data-models/: spec.md
(+36 files in other folders)
